--- a/style.css
+++ b/style.css
@@ -212,4 +212,62 @@ summary h2::before {
         #03a9f4,
         #ff0058);
 }
+.carousel-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.carousel {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+}
+
+.carousel-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+}
+
+.image-pack {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.carousel .carousel-container .image-pack div img {
+    width: 100%;
+    object-fit: cover;
+    flex: 1;
+}
+
+.carousel-next,
+.carousel-prev {
+    border: none;
+    margin: 1rem;
+    border-radius: 50%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.no-show {
+    display: none;
+}
+
+.span-carousel {
+    display: inline-block;
+    background-color: lightblue;
+    width: .5rem;
+    height: .5rem;
+    margin: .5rem;
+    border-radius: 50%;
+}
+
+.span-active {
+    background-color: rgb(126, 201, 226);
+}
