--- a/style.css
+++ b/style.css
@@ -1,218 +1,237 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
-    color:whitesmoke;
-    font-family: 'Comfortaa','Unbounded' Courier, monospace;
+    color: whitesmoke;
     box-sizing: border-box;
 }
-header{
+
+body {
     display: flex;
-    justify-content: space-between;
-    margin:2% 10%;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: black;
+    color: aliceblue;
+    width: 100%;
 }
-body{
-    background-color: #111;
+
+header {
+    width: 90vw;
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    top: 4rem;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 500;
 }
-main{
-    margin: 2% 10%;
+
+main {
     text-align: justify;
-    margin-top: 5%;
+    scroll-snap-type: y mandatory;
+    height: 100vh;
+    overflow-y: scroll;
 }
-li{
+
+li {
     display: inline;
-    padding:0 30px;
+    padding: 0 30px;
     text-decoration: none;
     color: #fff;
-    font-size:18px;
+    font-size: 18px;
     list-style: none;
 }
-a{
-    text-decoration:none;
+
+a {
+    text-decoration: none;
 }
-section{
-    margin-bottom:60px;
+
+section {
+    min-height: 100vh;
+    background-image: url('assets/background2.png');
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #111;
+    padding: 5rem;
+    scroll-snap-align: center;
 }
-p{
-    font-family: 'Comfortaa';
-    font-size:16px;
+
+p {
+    font-size: 18px;
     line-height: 1.5em;
     margin-bottom: 1rem;
+    font-family: 'Comfortaa', cursive;
 }
-h2,h3, h4{
-    margin-bottom:2rem;
+
+h1 {
+    font-size: 4rem;
+    padding: 1rem;
+    background-color: #5e17eb;
+    color: #c1ff72;
+    width: -moz-fit-content;
+    width: fit-content;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 800;
 }
-h4{
-    font-size:22px;
+
+h2,
+h3,
+h4 {
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 600;
+    margin-bottom: 2rem;
 }
-h3{
-    font-size:26px;
+
+h3 {
+    font-size: 2rem;
 }
-h2{
-    font-size: 31px;
-    line-height: 0.5;
+
+h2 {
+    font-size: 2.5rem;
 }
-details summary {
+
+.redesocial {
+    display: flex;
+    gap: 1rem;
+}
+
+.shadow {
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: .2rem;
+    background: linear-gradient(45deg, #c1ff72, #4dff03);
+    display: flex;
+
+}
+
+.shadow .content {
+    padding: 1rem;
+    background-color: black;
+    background: linear-gradient(to right, rgba(43, 11, 108, 0.8) 0%, rgba(43, 11, 108, 0.8) 50%, rgba(43, 11, 108, 0.9) 50%, rgba(43, 11, 108, .9) 100%);
+}
+
+.certificate {
+    height: 10rem;
+}
+
+.certificate img {
+    height: 100%;
+    object-fit: cover;
+}
+
+a img {
+    width: 20px;
+    margin-right: 1rem;
+}
+
+#introduction {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    align-items: center;
+}
+
+.intro-image {
+    grid-column: 2;
+}
+
+.intro-image img {
+    width: 100%;
+}
+
+#introduction .intro-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+}
+
+#introduction h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+#introduction p {
+    width: 50%;
+}
+
+#formacao {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 3;
+    gap: 2rem;
+    align-items: center;
+    justify-items: center;
+}
+
+section h2 {
+    width: 100%;
+    grid-column: 1 / -1;
+    grid-row: 1;
+}
+
+.blue-paragraph {
+    grid-column: 1 / 3;
+    grid-row: 2;
+}
+
+.certificate-one {
+    grid-column: 3;
+    grid-row: 2;
+    align-items: center;
+}
+
+.alura-paragraph {
+    grid-column: 2 / -1
+}
+
+#tecnologias {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+    justify-items: center;
+}
+
+.icon-technology {
+    width: 5rem;
+}
+
+.base-tech h3,
+.backend h3,
+.frontend h3 {
+    grid-column: 1 / -1;
+}
+
+.base-tech {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.backend {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.frontend {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+.base-tech,
+.backend,
+.frontend {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 2;
+    gap: 1rem;
+    align-items: center;
+    justify-items: center;
+}
+
+button {
     cursor: pointer;
 }
 
-details summary>* {
-    display: inline;
-}
-.container{
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    justify-content: center;
-    padding:40px 0;
-    flex-wrap: wrap;
-}
-.container2 {
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    margin-right:20px;
-}
-.container .box, .container .box2{
-    position: relative;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    transition:0.5s;
-    align-items: flex-start;
-    padding-top: 15px;
-    text-align: center;
-}
-.container2 .box3 {
-    position: relative;
-    color: #fff;
-    display: flex;
-    justify-content: left;
-    transition: 0.5s;
-    align-items: flex-start;
-    padding-top: 15px;
-    padding-left: 15px;
-    text-align: center;
-}
-.container .box{
-    width: 200px;
-    height: 250px;
-    margin:20px 30px;
-}
-.container .box2{
-    width: 100%;
-    height: 250px;
-}
-.container2 .box3 {
-    width: 125px;
-    height: 50px;
-}
-.container .box2 img{
-    width:8%;
-    margin: 10px;
-}
-.container .box img{
-    width:25%;
-    margin: 10px;
-}
-.box-formacao{
-    height:280px!important;
-}
-.formacao{
-    width: 300px !important;
-    margin:0 20px!important;
-}
-.content-formacao{
-    display:flex;
-}
-.container .box:hover, .container .box2:hover,
-.container2 .box3:hover{
-    transform: translateY(-20px);
-}
-.container .box:before, .container .box2:before,
-.container2 .box3:before{
-    content:"";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(45deg, #03a9f4,#ff0058)
-}
-.container .box:after, .container .box2:after,
-.container2 .box3:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(45deg, #03a9f4, #ff0058);
-    filter:blur(30px)
-}
-.container .box span, .container .box2 span,
-.container2 .box3 span{
-    position: absolute;
-    top: 6px;;
-    left: 6px;
-    bottom: 6px;
-    right: 6px;
-    background: rgba(0,0,0,0.6);
-    z-index: 2;
-}
-.container .box span:before, .container .box2 span:before,
-.container2 .box3 span:before{
-    content:"";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background: rgba(255,255,255,0.1);
-    pointer-events: none;
-}
-.container .box .content, .container .box2 .content{
-    position: relative;
-    z-index: 10;
-    padding:20px 10px;
-}
-.container2 .box3 .content {
-    position: relative;
-    z-index: 10;
-}
-.white-background{
-    background-color:#fff;
-}
-a img{
-    width: 20px;
-}
-a{
-    padding-right: 10px;
-}
-.redesocial{
-    display: flex;
-}
-.summary{
-        display: flex;
-}
-summary h2{
-    position: relative;
-    line-height: 2;
-}
-summary h2::before {
-    content: "";
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    left: 0;
-    height: 2px;
-    border-radius: 2px;
-    background: linear-gradient(45deg,
-        #03a9f4,
-        #ff0058);
-}
 .carousel-section {
     display: flex;
     flex-direction: column;
@@ -232,6 +251,7 @@ summary h2::before {
     display: flex;
     width: 100%;
     transition: transform 0.5s ease-in-out;
+
 }
 
 .image-pack {
@@ -250,11 +270,14 @@ summary h2::before {
 
 .carousel-next,
 .carousel-prev {
+    width: 3rem;
+    height: 3rem;
     border: none;
-    margin: 1rem;
+    margin: .3rem;
     border-radius: 50%;
-    background-color: transparent;
     cursor: pointer;
+    background-color: transparent;
+    color: #fff;
 }
 
 .span-carousel {
@@ -267,8 +290,9 @@ summary h2::before {
 }
 
 .span-active {
-    background-color: rgb(47, 184, 229);
+    background-color: rgb(126, 201, 226);
 }
+
 .no-show {
     display: none;
 }
@@ -277,7 +301,6 @@ summary h2::before {
     position: relative;
     width: 100%;
     perspective: 1000px;
-    height: 15rem;
 }
 
 .card-back {
@@ -298,13 +321,13 @@ summary h2::before {
 }
 
 .card-back {
-    background-color: transparent;
+    background-color: lightblue;
     z-index: 1;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.2s ease-out, visibility 0s linear 0.5s;
     display: grid;
-    grid-template-columns: 1.5fr 2fr;
+    grid-template-columns: 1fr 3fr;
     gap: .5rem;
     border-radius: 1rem;
 }
@@ -323,22 +346,20 @@ summary h2::before {
 }
 
 .card-back div p {
-    font-size: .8em;
     padding: .3rem 0;
 }
 
 .card-back div h5 {
-    font-size: 1rem;
+    font-size: 1.2rem;
     padding: .3rem 0;
 }
 
 .info-card-back a button {
     border: none;
-    width: 100%;
+    width: 8rem;
     height: 1.8rem;
-    margin: .3rem .2rem;
+    margin: .6rem .2rem;
     border-radius: .9rem;
-    color:black;
 }
 
 .card.flip .card-front {
