--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     background-color: black;
     color: aliceblue;
     width: 100%;
+    overflow: hidden;
 }
 
 header {
@@ -31,6 +32,7 @@ main {
     scroll-snap-type: y mandatory;
     height: 100vh;
     overflow-y: scroll;
+    
 }
 
 li {
