--- a/style.css
+++ b/style.css
@@ -21,13 +21,16 @@ header {
     width: 90vw;
     display: flex;
     justify-content: flex-end;
-    position: relative;
-    top: 4rem;
+    position: fixed;
+    top: 3.5rem;
     font-family: 'Orbitron', sans-serif;
     font-weight: 500;
+    z-index: 2;
 }
 
 main {
+    position: absolute;
+    top:0;
     text-align: justify;
     scroll-snap-type: y mandatory;
     height: 100vh;
@@ -63,7 +66,7 @@ section {
     background-position: center;
     background-repeat: no-repeat;
     background-color: #111;
-    padding: 7rem;
+    padding: 5rem;
     scroll-snap-align: center;
 }
 
