--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a {
 
 section {
     min-height: 100vh;
-    background-image: url('assets/background2.png');
+    background-image: url('assets/background-test.png');
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
